<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:padding="15dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/feedback"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:text="@string/bottom_sheet_feedback_msg"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="end"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:text="@string/bottom_sheet_feedback_cancel_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorAccent"/>
        <Button
            android:id="@+id/button_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:text="@string/bottom_sheet_feedback_proceed_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

</LinearLayout>