<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/staff_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/staff_card_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/imageview_insane_height"
            android:scaleType="centerCrop"
            android:contentDescription="@string/nav_student"
            android:src="@drawable/user_male"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_med">
            <TextView
                android:id="@+id/staff_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_name"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:singleLine="true"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/staff_office"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_nickname"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/staff_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_birth"
                android:textSize="@dimen/text_size_medium"
                android:singleLine="true"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/staff_call_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_staff"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:background="@drawable/birthday_btn"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>