<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/student_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/student_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_card_height"
            android:scaleType="centerCrop"
            android:contentDescription="@string/nav_student"
            android:src="@drawable/image_1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_med">
            <TextView
                android:id="@+id/student_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_name"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/student_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_quotes"
                android:textSize="@dimen/text_size_small"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/student_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fb"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold"
                    android:padding="@dimen/padding_med"
                    android:textColor="@color/blue"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/student_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tw"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold"
                    android:padding="@dimen/padding_med"
                    android:textColor="@color/light_blue"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>