<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/excoss_student_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/excoss_student_image"
            android:layout_width="@dimen/excoss_width"
            android:layout_height="@dimen/excoss_height"
            android:scaleType="centerCrop"
            android:contentDescription="@string/nav_student"
            android:src="@drawable/image_1"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="@dimen/padding_med">
                <TextView
                    android:id="@+id/excoss_student_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_name"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/excoss_student_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_quotes"
                    android:layout_below="@id/excoss_student_name"
                    android:textSize="@dimen/text_size_small"
                    android:layout_marginTop="@dimen/margin_med"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_med"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/excoss_student_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fb"
                        android:textAllCaps="true"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold"
                        android:padding="@dimen/padding_med"
                        android:textColor="@color/blue"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:id="@+id/excoss_student_twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tw"
                        android:textAllCaps="true"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold"
                        android:padding="@dimen/padding_med"
                        android:layout_marginStart="@dimen/margin_small"
                        android:textColor="@color/light_blue"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

</android.support.v7.widget.CardView>