<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <!--No Internet Warning Text-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/warning_no_internet"
                android:textSize="@dimen/text_size_medium"
                android:padding="@dimen/padding_medium"/>
            <!--Wifi image-->
            <ImageView
                android:layout_width="@dimen/nav_header_icon"
                android:layout_height="@dimen/nav_header_icon"
                app:srcCompat="@drawable/ic_no_network"
                android:contentDescription="@string/warning_no_internet"
                android:layout_gravity="center" />
            <!--No Internet warning description text-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_medium"
                android:text="@string/warning_no_internet_message"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>
        <!--Internet Warning Continue Button-->
        <Button
            android:id="@+id/warning_no_internet_proceed_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/birthday_btn"
            android:gravity="center"
            android:padding="@dimen/padding_small"
            android:text="@string/warning_no_internet_proceed"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>
</LinearLayout>