<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeMainFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_med"
            android:orientation="vertical">

            <!--Class Of Champions-->
            <android.support.v7.widget.CardView
                android:id="@+id/class_of_champion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:foreground="?attr/selectableItemBackground"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/imageview_insane_height"
                        android:background="@color/colorPrimary">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/classofchamps_banner"
                            android:contentDescription="@string/nav_excos"
                            android:layout_centerInParent="true"
                            android:scaleType="centerCrop"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:fontFamily="sans-serif-condensed"
                            android:padding="@dimen/padding_small"
                            android:text="@string/nabot"
                            android:shadowColor="@color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="2"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_larger" />
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_med">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/coc_desc" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--FYF-->
            <android.support.v7.widget.CardView
                android:id="@+id/fyf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginTop="@dimen/margin_small"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/imageview_insane_height">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/excoss_banner"
                            android:contentDescription="@string/nav_excos"
                            android:scaleType="centerCrop"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:fontFamily="sans-serif-condensed"
                            android:padding="@dimen/padding_small"
                            android:text="@string/fyi"
                            android:shadowColor="@color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="2"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_larger" />
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_med">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fyf_desc" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--Excoss-->
            <android.support.v7.widget.CardView
                android:id="@+id/excoss_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:foreground="?attr/selectableItemBackground"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/imageview_insane_height">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/excoss_banner"
                            android:contentDescription="@string/nav_excos"
                            android:scaleType="centerCrop"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:fontFamily="sans-serif-condensed"
                            android:padding="@dimen/padding_small"
                            android:text="@string/nav_excos"
                            android:textColor="@color/white"
                            android:shadowColor="@color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="3"
                            android:textSize="@dimen/text_size_larger" />
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_med">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/excos_desc" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--Staffs-->
            <android.support.v7.widget.CardView
                android:id="@+id/staffs_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:foreground="?attr/selectableItemBackground"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/imageview_insane_height">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/excoss_banner"
                            android:contentDescription="@string/nav_staffs"
                            android:scaleType="centerCrop"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:fontFamily="sans-serif-condensed"
                            android:padding="@dimen/padding_small"
                            android:text="@string/nav_staffs"
                            android:textColor="@color/white"
                            android:shadowColor="@color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="3"
                            android:textSize="@dimen/text_size_larger" />
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_med">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nabot_description" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>
</FrameLayout>